tests/ui/rfc-1717-dllimport/rename-modifiers.stderr
error: overriding linking modifiers from command line is not supported
  --> $DIR/rename-modifiers.rs:9:1
   |
LL | extern "C" {}
   | ^^^^^^^^^^^^^

error: aborting due to previous error

